public/mockup.css
body {
  background-color: black;
}
/* @media (min-width: 768px) and (max-width: 1024px) {
  body {
    background-color: red;
  }
}
@media (min-width: 600px) and (max-width: 767px) {
  body {
    background-color: orange;
  }
}
@media (min-width: 400px) and (max-width: 599px) {
  body {
    background-color: green;
  }
}
@media (min-width: 80px) and (max-width: 399px) {
  body {
    background-color: green;
  }
} */

#container {
  background-image: url('images/space.png');
  background-repeat: no-repeat;
  max-width: 900px;
  width: calc(95% - 50px);
  margin-left: calc(4%);
}
@media (min-width: 80px) and (max-width: 399px) {
  #container {
    margin-left: 0px;
    width: 98%;
  } 
}
@media (min-width: 80px) and (max-width: 399px) {
  body {
    margin-left: 0px;
    margin-right: 0px;
  }
}
.profile-pic-container img {
  border-radius: 10px;
}
.profile-pic-container {
  top: 15px;
  width: 48%;
  max-width: 900px;
  margin-right: 0px;
  margin-left: 20px;
}
@media (min-width: 50px) and (max-width: 599px) {
  .profile-pic-container {
    margin-top: -15px;
    width: 100%;
  }
}

#profile-area {
  display: flex;
  flex-direction: row-reverse;
  color: #363636;
  max-width: 900px; 
  padding-left: 1rem;
  padding-right: 3rem;
  padding-top: 1rem;
}
@media (min-width: 50px) and (max-width: 599px) {
  #profile-area {
    flex-direction: column;
    margin-left: 30px;
  }
}

.speech {
  display: flex;
  flex-direction: column;
  background-color: #d0d6d8;
  border-radius: 5px;
  padding-bottom: 1rem;
}

#greeting {
  display: flex;
  justify-content: flex-start;
  font-weight: bold;
  font-size: 4vh;
  margin-bottom: 1rem;
  padding-top: 0.8rem;
  margin-bottom: 0px;
  padding-bottom: 0px;
  padding-left: 0.8rem;
  padding-right: 0.8rem;
}

#quote {
  font-size: 1.0rem;
  margin-top: 0px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

h2 {
  background-color: white;
  padding-bottom: 0.5rem;
  background-color: #ffffff;
  /* font-size: 100%; */
}

strong {
  font-size: 16pt;
  background-color: #ffffff;
  /* margin: 2%; */
  width: 5rem;
}

button {
  display: flex;
  float: right;
  /* margin-bottom: 10%; */
  padding: 0.5rem;
  font-family: 'Times New Roman', Times, serif;
  font-size: 10pt;
  font-weight: bold;
  color: #ffffff;
  background-color: #0081d5;
  border-radius: 5%;
}

#copyright {
  display: flex;
  justify-content: center;
  font-size: 8pt;
  font-weight: inherit;
  color: #fffefe;
  margin-top: 3rem;
}
#profile-pic {
  max-width: 100%;
}

#connected {
  display: flex;
  justify-content: center;
  font-size: 14pt;
  color: #fffefe;
}

.media-icons {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;
  margin-top: 2rem;
  /* margin-left: 10%; */
  /* margin-right: 10%; */
}
.media-icon {
  margin-right: 0.5rem;
}

#triangle {
  width: 0;
  height: 0;
  position: relative;
  border-top: 2.5rem solid #d0d6d9;
  border-right: 2.5rem solid transparent;
  transform: translate(0px, 50px) rotate(90deg);
}
@media (min-width: 50px) and (max-width: 400px) {
  #triangle {
    bottom: 30px;
    transform: translate(60px, 20px) rotate(90deg);
  }
}

@media (min-width: 401px) and (max-width: 500px) {
  #triangle {
    transform: translate(50px, 0px) rotate(90deg);
  }
}

#img-bar {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  border-radius: 10%;
  margin-top: 10px;
  margin-bottom: 2rem;
}

@media (min-width: 400px) and (max-width: 600) {
  #img-bar {
    display: flex;
    flex-flow: column wrap;
  }
}
#triangle-topleft {
  width: 0;
  height: 0;
  left: 0;
  position: relative;
  /* margin-right: 2rem; */
  /* margin-top: 2rem; */
  border-top: 2.5rem solid #d0d6d8;
  border-right: 2.5rem solid transparent;
  transform: translate(60px, 10px) rotate(360deg);
}
@media (min-width: 50px) and (max-width: 400px) {
  #triangle-topleft {
    transform: translate(60px, -10px) rotate(100deg);
  }
}

@media (min-width: 401px) and (max-width: 500px) {
  #triangle-topleft {
    transform: translate(50px, 0px) rotate(90deg);
  }
}

#img-bar {
  display: flex;
  flex-direction: row;

  justify-content: space-evenly;
  border-radius: 10%;
  margin-top: 80px;
  margin-bottom: 2rem;
}

.top-content {
  /* display: flex; */
  /* flex-direction: row; */
  background-color: white;
  font-size: 12pt;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.content-bold {
  display: flex;
  flex-direction: row;
  background-color: #ffffff;
  padding: 1%;
}

.content-img {
  display: flex;
  flex-direction: row;
  width: 100%;
}

